--- a/nginx-deploy.yaml
+++ b/nginx-deploy.yaml
@@ -45,7 +45,7 @@ spec:
     spec:
       containers:
         - name: nginx-app
-          image: "nginx:stable"
+          image: openresty/openresty
           imagePullPolicy: IfNotPresent
           ports:
             - name: http
